--- a/paper/references.bib
+++ b/paper/references.bib
@@ -21,7 +21,7 @@
     doi = {10.21105/joss.01686},
   }  
   
-  
+
 @Manual{citeLahman,
     title = {Lahman: Sean `Lahman' Baseball Database},
     author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
@@ -71,4 +71,13 @@
     doi = {10.21105/joss.01686},
   }  
   
+  
+
+@Manual{,
+    title = {opendatatoronto: Access the City of Toronto Open Data Portal},
+    author = {Sharla Gelfand},
+    year = {2022},
+    note = {R package version 0.1.5},
+    url = {https://CRAN.R-project.org/package=opendatatoronto},
+  }
   
